--- a/styles/portfulio.css
+++ b/styles/portfulio.css
@@ -21,6 +21,18 @@
         font-weight: 700;
         padding:15px 25px;
     }
+    .section-title{
+        color:#181818;
+        font-size: 35px;
+        font-weight: 700;
+        text-align: center;
+        }
+        .section-pragraphh{
+            color: #757575;;
+            text-align: center;
+            font-size: 18px;
+
+        }
 /* nav relative style css apply */
 
 nav {
@@ -48,15 +60,140 @@ nav ul li a{
 /* head releative style */
 .head{
     background-color: #FFF8F3;
+     background-image:url(../Portfulio-resources-main/images/header_bg.png);
+     background-repeat: no-repeat;
+     background-position: bottom right;
 
 }
 
 .banner{
-    padding: 30px 30px 30px 150px;
+    padding: 30px 30px 0px 150px;
     display: flex;
     align-items: center;
+    justify-content: space-between;
 }
-
+.banner-content{
+     max-width:585px;
+}
 .banner .web-photos{
     width: 500px;
+   
+}
+.title-text-1{
+    font-size: 45px;
+    margin-bottom: 0px;
+}
+.title-text-2{
+    font-size: 85px;
+    font-weight: 700;
+   margin-top:5px;
+    margin-bottom: 20px;
+}
+.title-pragraph{
+    font-size: 15px;
+   
+
+}
+
+/* main section styles */
+main{
+    max-width: 1140px;
+    margin: 0px auto;
+}
+main section{
+    margin-top: 130px;
+}
+/* about sectont styles */
+.About{
+    border-radius: 10px;
+    padding: 130px;
+    background-color: #FFF8F3;
+    margin: 120px 0px;
+}
+.about-info-container{
+    display: flex;
+    justify-content: space-around;
+}
+.about-info{
+    text-align: center;
+}
+#what i do-description{
+    padding: 30px 150px;
+}
+
+.sckil-development-tool{
+    display: flex;
+    gap:24px;
+}
+.skill{
+   
+    background-color: #ffff            ;
+    border-radius: 5px;
+    box-shadow: 0px 6px 50px 0px rgb(0, 0, 0, 0.06);
+
+}
+.skill-title{
+    font-size: 25px;
+    font-weight: 700;
+}
+.skill-decription{
+    color:#757575;
+}
+/* resume style css */
+.education-column-title{
+    color:#474747;
+    font-size: 30px;
+    font-weight: 700;
+   
+}
+.education-container{
+    display: flex;
+    gap: 50px;
+}
+.education-list-title{
+    color:#474747;
+    font-size: 25px;
+    font-weight: 700;
+    margin-bottom: 10px;
+}
+.education-institute-list{
+    margin-bottom: 20px;
+    margin-top: 0px;
+}
+.education-description{
+    color:#757575;
+}
+.education-container hr{
+    margin: 35px;
+}
+.download-cv{
+    text-align: center;
+    margin: 50px;
+    border-radius: 5px;
+}
+/* footer styles */
+footer{
+    display: flex;
+    background-color: #FFF8F3;
+    margin-top: 100px;
+    
+    padding: 130px 200px;
+}
+.footer-column{
+    width:50%;
+  
+
+}
+.social-midia-links a{
+    margin-right: 24px;
+}
+.contact input[type="text"], .contact input[type="email"],textarea{
+    display: block;
+    margin-bottom: 25px;
+    padding: 18px 30px;
+    color: black
+    background-color: #fff;
+    border-radius: 5px;  
+    border: 0;
+    width: 100%;
 }
