--- a/styles/portfulio.css
+++ b/styles/portfulio.css
@@ -60,9 +60,9 @@ nav ul li a{
 /* head releative style */
 .head{
     background-color: #FFF8F3;
-     background-image:url(../Portfulio-resources-main/images/header_bg.png);
+     background-image:url('../Portfulio-resources-main/images/header_bg.png'), url("../Portfulio-resources-main/images/developer.png"); 
      background-repeat: no-repeat;
-     background-position: bottom right;
+     background-position: bottom right,top left;
 
 }
 
